tests/sksl/errors/ReservedNameGoto.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'goto'
1 error
